[package]
name = "rust-coreutils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo"
path = "src/echo/bin/echo.rs"

[[bin]]
name = "yes"
path = "src/yes/bin/main.rs"

[[bin]]
name = "true"
path = "src/true/bin/main.rs"

[[bin]]
name = "false"
path = "src/false/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"]}
